# ZittelmenEngine

./: .gitignore  CMakeLists.txt  README.md  ZittelmenEngine.cpp  ZittelmenEngine.h  ZittelmenEngine.pro
Examples/: CMakeLists.txt
Examples/SimpleMesh/: CMakeLists.txt  Main.cpp
Examples/SimpleTriangle/: CMakeLists.txt  Main.cpp
Scripts/: CompileShaders.bat
Source/: Dependencies.pri  Lib.pri  MemoryLeakTest.h  ZittelmenEngine.cpp  ZittelmenEngine.h  zittelmenengine_global.h
Source/API/: ZiCamera.cpp  ZiCamera.h  ZiEngine.cpp  ZiEngine.h  ZiEntity.cpp  ZiEntity.h  ZiMesh.cpp  ZiMesh.h  ZiScene.cpp  ZiScene.h  ZiTexture.cpp  ZiTexture.h
Source/Qt3D/: Qt3DWindow.cpp  Qt3DWindow.h  VulkanRendererQt.cpp  VulkanRendererQt.h  VulkanWindowQt.cpp  VulkanWindowQt.h
Source/UnitTest/: MemoryLeakTest.h
Source/Vulkan/: Vulkan.pri  VulkanBase.cpp  VulkanBase.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanCommand.cpp  VulkanCommand.h  VulkanController.cpp  VulkanController.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFactory.cpp  VulkanFactory.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanInstance.cpp  VulkanInstance.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRuntime.cpp  VulkanRuntime.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanUniform.cpp  VulkanUniform.h  VulkanUtils.hpp  VulkanVertex.hpp  VulkanWindow.cpp  VulkanWindow.h  VulkanWindowQt.cpp  VulkanWindowQt.h
Source/Vulkan/DTO/: Buffer.h
Source/Vulkan/Shaders/: Shaders.pri  color.frag  color.vert
Vulkan/: VulkanBase.cpp  VulkanBase.h
